# qdrant

./: .gitignore  AGENTS.md  Cargo.toml
docs/: architecture.md  core_modules.md  directory_structure.md  qdrant_index_analysis.md  qdrant_index_architecture.md
docs/api/: embedded-library-analysis.md
docs/embedded/: api-reference.md  config-integration-analysis.md  config-reference.md  feature-comparison.md  missing-features-implementation.md
docs/license/: todo.md
examples/: embedded.rs
lib/api/src/: lib.rs
lib/api/src/grpc/proto/: README.md
lib/qdrant-embedded/: Cargo.toml  IMPLEMENTATION_ANALYSIS.md
lib/qdrant-embedded/src/: client.rs  config.rs  conversions.rs  error.rs  lib.rs  operations.rs  tests.rs
